fixed the gauss qquadrature result being the double of the directly integrated.

--- a/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/tri_axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.009379Z",
-     "start_time": "2025-08-02T20:52:02.998109Z"
+     "end_time": "2025-08-03T03:28:47.821845Z",
+     "start_time": "2025-08-03T03:28:46.837651Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.077935Z",
-     "start_time": "2025-08-02T20:52:03.069264Z"
+     "end_time": "2025-08-03T03:28:47.852526Z",
+     "start_time": "2025-08-03T03:28:47.835563Z"
     }
    },
    "cell_type": "code",
@@ -92,13 +92,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.139771Z",
-     "start_time": "2025-08-02T20:52:03.135096Z"
+     "end_time": "2025-08-03T03:28:47.868904Z",
+     "start_time": "2025-08-03T03:28:47.864281Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +108,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.162084Z",
-     "start_time": "2025-08-02T20:52:03.153898Z"
+     "end_time": "2025-08-03T03:28:49.491242Z",
+     "start_time": "2025-08-03T03:28:48.396401Z"
     }
    },
    "cell_type": "code",
@@ -150,7 +150,7 @@
    ],
    "id": "d47a539ba577b9ea",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -161,8 +161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.296720Z",
-     "start_time": "2025-08-02T20:52:03.278133Z"
+     "end_time": "2025-08-03T03:28:49.622169Z",
+     "start_time": "2025-08-03T03:28:49.512921Z"
     }
    },
    "cell_type": "code",
@@ -190,13 +190,13 @@
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.444766Z",
-     "start_time": "2025-08-02T20:52:03.400989Z"
+     "end_time": "2025-08-03T03:28:49.760991Z",
+     "start_time": "2025-08-03T03:28:49.653968Z"
     }
    },
    "cell_type": "code",
@@ -304,7 +304,7 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -325,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.478536Z",
-     "start_time": "2025-08-02T20:52:03.451752Z"
+     "end_time": "2025-08-03T03:28:49.848786Z",
+     "start_time": "2025-08-03T03:28:49.806998Z"
     }
    },
    "cell_type": "code",
@@ -384,7 +384,7 @@
      ]
     }
    ],
-   "execution_count": 38
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -398,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.632981Z",
-     "start_time": "2025-08-02T20:52:03.603306Z"
+     "end_time": "2025-08-03T03:28:50.295893Z",
+     "start_time": "2025-08-03T03:28:49.979148Z"
     }
    },
    "cell_type": "code",
@@ -475,7 +475,7 @@
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -486,8 +486,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.742379Z",
-     "start_time": "2025-08-02T20:52:03.715609Z"
+     "end_time": "2025-08-03T03:28:50.435108Z",
+     "start_time": "2025-08-03T03:28:50.394859Z"
     }
    },
    "cell_type": "code",
@@ -537,7 +537,7 @@
      ]
     }
    ],
-   "execution_count": 40
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -548,8 +548,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:03.845954Z",
-     "start_time": "2025-08-02T20:52:03.839359Z"
+     "end_time": "2025-08-03T03:28:50.586117Z",
+     "start_time": "2025-08-03T03:28:50.577058Z"
     }
    },
    "cell_type": "code",
@@ -567,7 +567,7 @@
    ],
    "id": "b6bcf4700332a080",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -578,8 +578,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:54:24.919161Z",
-     "start_time": "2025-08-02T20:54:24.787225Z"
+     "end_time": "2025-08-03T03:48:41.389916Z",
+     "start_time": "2025-08-03T03:48:41.249669Z"
     }
    },
    "cell_type": "code",
@@ -600,7 +600,7 @@
     "    z_map = N_map.dot(sp.Matrix([z1, z2, z3])).subs(physical_coords_map)\n",
     "\n",
     "    # Element area\n",
-    "    det_J = Ae.subs(physical_coords_map)\n",
+    "    Area = Ae.subs(physical_coords_map)\n",
     "\n",
     "    K = sp.zeros(ND * NNODE, ND * NNODE)\n",
     "\n",
@@ -614,7 +614,7 @@
     "\n",
     "        B_evaluated = B_element.subs({'R': r_physical_at_gp, 'Z': z_physical_at_gp})\n",
     "\n",
-    "        K += B_evaluated.T * D * B_evaluated * 2 * sp.pi * r_physical_at_gp * det_J * w\n",
+    "        K += 2 * sp.pi * r_physical_at_gp * B_evaluated.T * D * B_evaluated * Area * w\n",
     "\n",
     "    return K\n",
     "\n",
@@ -647,52 +647,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "Gauss point in natural coordinates: (0.3333333333333333, 0.3333333333333333)\n",
-      "Physical coordinates at Gauss point: (3.33333333333333, 0.333333333333333)\n",
-      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.05026602745056152\n",
-      "1\n",
-      "Gauss point in natural coordinates: (0.16666666666666666, 0.16666666666666666)\n",
-      "Physical coordinates at Gauss point: (3.16666666666667, 0.166666666666667)\n",
-      "Gauss point in natural coordinates: (0.6666666666666666, 0.16666666666666666)\n",
-      "Physical coordinates at Gauss point: (3.66666666666667, 0.166666666666667)\n",
-      "Gauss point in natural coordinates: (0.16666666666666666, 0.6666666666666666)\n",
-      "Physical coordinates at Gauss point: (3.16666666666667, 0.666666666666667)\n",
-      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.06101584434509277\n",
+      "Time taken to calculate the stiffness matrix by 1 GP integration: 0.06112933158874512\n",
+      "Time taken to calculate the stiffness matrix by 3 GP integration: 0.06693363189697266\n",
       "Stiffness matrix from 1-point Gauss quadrature (K_gauss_1pt):\n",
-      "[[6.822895 3.786022 -5.582368 -1.611073 -1.796347 -2.174949]\n",
-      " [3.786022 7.249829 -2.658271 -1.611073 -1.852734 -5.638756]\n",
-      " [-5.582368 -2.658271 6.178466 0 0.298049 2.658271]\n",
-      " [-1.611073 -1.611073 0 1.611073 1.611073 0]\n",
-      " [-1.796347 -1.852734 0.298049 1.611073 1.667461 0.241661]\n",
-      " [-2.174949 -5.638756 2.658271 0 0.241661 5.638756]]\n",
+      "[[3.411447 1.893011 -2.791184 -0.805537 -0.898173 -1.087474]\n",
+      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
+      " [-2.791184 -1.329135 3.089233 0 0.149024 1.329135]\n",
+      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
+      " [-0.898173 -0.926367 0.149024 0.805537 0.833730 0.120830]\n",
+      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
       "\n",
       "Stiffness matrix from 3-point Gauss quadrature (K_gauss_3pt):\n",
-      "[[6.854866 3.786022 -5.596938 -1.611073 -1.808892 -2.174949]\n",
-      " [3.786022 7.249829 -2.658271 -1.611073 -1.852734 -5.638756]\n",
-      " [-5.596938 -2.658271 6.200319 0 0.283479 2.658271]\n",
-      " [-1.611073 -1.611073 0 1.611073 1.611073 0]\n",
-      " [-1.808892 -1.852734 0.283479 1.611073 1.699432 0.241661]\n",
-      " [-2.174949 -5.638756 2.658271 0 0.241661 5.638756]]\n",
+      "[[3.427433 1.893011 -2.798469 -0.805537 -0.904446 -1.087474]\n",
+      " [1.893011 3.624915 -1.329135 -0.805537 -0.926367 -2.819378]\n",
+      " [-2.798469 -1.329135 3.100160 0 0.141740 1.329135]\n",
+      " [-0.805537 -0.805537 0 0.805537 0.805537 0]\n",
+      " [-0.904446 -0.926367 0.141740 0.805537 0.849716 0.120830]\n",
+      " [-1.087474 -2.819378 1.329135 0 0.120830 2.819378]]\n",
       "\n",
       "Comparison of the two stiffness matrices:\n",
-      "array([[0.9953360, 1.000000, 0.9973968, 1.000000, 0.9930648, 1.000000],\n",
-      "       [1.000000, 1.000000, 1.000000, 1.000000, 1.000000, 1.000000],\n",
-      "       [0.9973968, 1.000000, 0.9964755, nan, 1.05140, 1.000000],\n",
-      "       [1.000000, 1.000000, nan, 1.000000, 1.000000, nan],\n",
-      "       [0.9930648, 1.000000, 1.05140, 1.000000, 0.9811872, 1.00000],\n",
+      "array([[0.9953359, 1.000000, 0.9973968, 1.00000, 0.993064, 1.000000],\n",
+      "       [1.000000, 1.000000, 1.000000, 1.00000, 1.00000, 1.000000],\n",
+      "       [0.9973968, 1.000000, 0.9964753, nan, 1.05139, 1.000000],\n",
+      "       [1.00000, 1.00000, nan, 1.00000, 1.00000, nan],\n",
+      "       [0.993064, 1.00000, 1.05139, 1.00000, 0.981187, 1.00000],\n",
       "       [1.000000, 1.000000, 1.000000, nan, 1.00000, 1.000000]],\n",
       "      dtype=object)\n"
      ]
     }
    ],
-   "execution_count": 49
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:07.031856Z",
-     "start_time": "2025-08-02T20:52:04.114704Z"
+     "end_time": "2025-08-03T03:28:55.966351Z",
+     "start_time": "2025-08-03T03:28:51.191271Z"
     }
    },
    "cell_type": "code",
@@ -738,7 +728,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate the stiffness matrix by double integration: 2.8545587062835693\n",
+      "Time taken to calculate the stiffness matrix by double integration: 4.677901744842529\n",
       "The fully integrated stiffness matrix K is:\n",
       "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
       "⎢                                                    ⎥\n",
@@ -754,13 +744,13 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:07.190911Z",
-     "start_time": "2025-08-02T20:52:07.117452Z"
+     "end_time": "2025-08-03T03:28:56.215021Z",
+     "start_time": "2025-08-03T03:28:56.077979Z"
     }
    },
    "cell_type": "code",
@@ -813,13 +803,13 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-02T20:52:07.260962Z",
-     "start_time": "2025-08-02T20:52:07.248630Z"
+     "end_time": "2025-08-03T03:28:56.397910Z",
+     "start_time": "2025-08-03T03:28:56.359416Z"
     }
    },
    "cell_type": "code",
@@ -882,7 +872,7 @@
       "The eigenvalues of the stiffness matrix K are: [0.0, 0.01079, 0.06332, 2.1416, 3.2325, 9.17893]\n",
       "\n",
       "Eigenvalues and eigenvectors for the stiffness matrix K_integrated:\n",
-      "The eigenvalues of the stiffness matrix K are: [-2e-05, 0.01046, 0.06334, 2.14192, 3.23274, 9.17857]\n",
+      "The eigenvalues of the stiffness matrix K are: [0.0, 0.01076, 0.06333, 2.14161, 3.23259, 9.17897]\n",
       "\n",
       "[[0.9953359 1.000000 0.9973968 1.00000 0.993064 1.000000]\n",
       " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
@@ -891,23 +881,23 @@
       " [0.993064 1.00000 1.05139 1.00000 0.981187 1.00000]\n",
       " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
       "\n",
-      "[[0.9954611 1.000003 0.9972036 0.999388 0.993496 1.000431]\n",
-      " [1.000003 0.9999766 1.000106 0.999388 1.00037 1.000134]\n",
-      " [0.9972036 1.000106 0.9965248 nan 1.04948 1.000106]\n",
-      " [0.999388 0.999388 nan 0.999388 0.999388 nan]\n",
-      " [0.993496 1.00037 1.04948 0.999388 0.980887 0.998577]\n",
-      " [1.000431 1.000134 1.000106 nan 0.998577 1.000134]]\n",
+      "[[0.9953408 1.000000 0.9973587 1.00000 0.993240 1.000000]\n",
+      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
+      " [0.9973587 1.000000 0.9964236 nan 1.05219 1.000000]\n",
+      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
+      " [0.993240 1.00000 1.05219 1.00000 0.981206 1.00000]\n",
+      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n",
       "\n",
-      "[[1.000126 1.000003 0.9998063 0.999388 1.00044 1.000431]\n",
-      " [1.000003 0.9999766 1.000106 0.999388 1.00037 1.000134]\n",
-      " [0.9998063 1.000106 1.000050 nan 0.998181 1.000106]\n",
-      " [0.999388 0.999388 nan 0.999388 0.999388 nan]\n",
-      " [1.00044 1.00037 0.998181 0.999388 0.999695 0.998577]\n",
-      " [1.000431 1.000134 1.000106 nan 0.998577 1.000134]]\n"
+      "[[1.000005 1.000000 0.9999618 1.00000 1.00018 1.000000]\n",
+      " [1.000000 1.000000 1.000000 1.00000 1.00000 1.000000]\n",
+      " [0.9999618 1.000000 0.9999481 nan 1.00076 1.000000]\n",
+      " [1.00000 1.00000 nan 1.00000 1.00000 nan]\n",
+      " [1.00018 1.00000 1.00076 1.00000 1.00002 1.00000]\n",
+      " [1.000000 1.000000 1.000000 nan 1.00000 1.000000]]\n"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 14
   }
  ],
  "metadata": {
