--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -4,9 +4,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Chapter 9: 2D axissymmetric isoparametric tri element\n",
+    "### Chapter 9: 2D axissymmetric isoparametric tri and quad element\n",
     "\n",
-    "Additionally: Dr. Szekrényes András, Chapter 13 for the quadratic element."
+    "Quad according to Dr. Szekrényes András, Chapter 13."
    ],
    "id": "b51ca543c8634a14"
   },
