two different ways to calculate the B matrices and the stiffness matrix

--- a/source/TwoD/Axissymmetric/general_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/general_axissymmetric.ipynb
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:16.889293Z",
-     "start_time": "2025-08-12T16:22:16.884724Z"
+     "end_time": "2025-08-12T16:35:40.393390Z",
+     "start_time": "2025-08-12T16:35:40.387066Z"
     }
    },
    "cell_type": "code",
@@ -67,7 +67,7 @@
    ],
    "id": "58d7ada50a52fb0f",
    "outputs": [],
-   "execution_count": 114
+   "execution_count": 140
   },
   {
    "metadata": {},
@@ -78,8 +78,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:16.915394Z",
-     "start_time": "2025-08-12T16:22:16.910517Z"
+     "end_time": "2025-08-12T16:35:40.411833Z",
+     "start_time": "2025-08-12T16:35:40.405867Z"
     }
    },
    "cell_type": "code",
@@ -97,7 +97,7 @@
    ],
    "id": "55a75e5d8a36c88b",
    "outputs": [],
-   "execution_count": 115
+   "execution_count": 141
   },
   {
    "metadata": {},
@@ -166,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:16.946815Z",
-     "start_time": "2025-08-12T16:22:16.922380Z"
+     "end_time": "2025-08-12T16:35:40.463202Z",
+     "start_time": "2025-08-12T16:35:40.424796Z"
     }
    },
    "cell_type": "code",
@@ -311,13 +311,13 @@
      ]
     }
    ],
-   "execution_count": 116
+   "execution_count": 142
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.014045Z",
-     "start_time": "2025-08-12T16:22:16.954797Z"
+     "end_time": "2025-08-12T16:35:40.589385Z",
+     "start_time": "2025-08-12T16:35:40.496112Z"
     }
    },
    "cell_type": "code",
@@ -497,7 +497,7 @@
      ]
     }
    ],
-   "execution_count": 117
+   "execution_count": 143
   },
   {
    "metadata": {},
@@ -519,8 +519,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.081621Z",
-     "start_time": "2025-08-12T16:22:17.030898Z"
+     "end_time": "2025-08-12T16:35:40.676264Z",
+     "start_time": "2025-08-12T16:35:40.620631Z"
     }
    },
    "cell_type": "code",
@@ -609,7 +609,7 @@
      ]
     }
    ],
-   "execution_count": 118
+   "execution_count": 144
   },
   {
    "metadata": {},
@@ -620,8 +620,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.123903Z",
-     "start_time": "2025-08-12T16:22:17.088606Z"
+     "end_time": "2025-08-12T16:35:40.705415Z",
+     "start_time": "2025-08-12T16:35:40.687238Z"
     }
    },
    "cell_type": "code",
@@ -702,7 +702,7 @@
      ]
     }
    ],
-   "execution_count": 119
+   "execution_count": 145
   },
   {
    "metadata": {},
@@ -836,8 +836,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.189664Z",
-     "start_time": "2025-08-12T16:22:17.141877Z"
+     "end_time": "2025-08-12T16:35:40.825737Z",
+     "start_time": "2025-08-12T16:35:40.740325Z"
     }
    },
    "cell_type": "code",
@@ -899,7 +899,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to calculate BAe matrix: 0.0160 seconds\n",
+      "Time taken to calculate BAe matrix: 0.0040 seconds\n",
       "\n",
       "The first block of the BA matrix:\n",
       "⎡-0.039435        0           0     ⎤\n",
@@ -916,7 +916,7 @@
      ]
     }
    ],
-   "execution_count": 120
+   "execution_count": 146
   },
   {
    "metadata": {},
@@ -927,8 +927,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.220384Z",
-     "start_time": "2025-08-12T16:22:17.196648Z"
+     "end_time": "2025-08-12T16:35:40.871121Z",
+     "start_time": "2025-08-12T16:35:40.851432Z"
     }
    },
    "cell_type": "code",
@@ -987,7 +987,7 @@
      ]
     }
    ],
-   "execution_count": 121
+   "execution_count": 147
   },
   {
    "metadata": {},
@@ -1002,8 +1002,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.281951Z",
-     "start_time": "2025-08-12T16:22:17.227376Z"
+     "end_time": "2025-08-12T16:35:40.960798Z",
+     "start_time": "2025-08-12T16:35:40.894840Z"
     }
    },
    "cell_type": "code",
@@ -1058,7 +1058,7 @@
      ]
     }
    ],
-   "execution_count": 122
+   "execution_count": 148
   },
   {
    "metadata": {},
@@ -1110,10 +1110,13 @@
    "id": "aca18c9f3b2d8e71"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T16:35:40.985672Z",
+     "start_time": "2025-08-12T16:35:40.973393Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def calculate_B_cos_symbolic(harmonic_l: int) -> sp.Matrix:\n",
     "    \"\"\"\n",
@@ -1212,7 +1215,9 @@
     "\n",
     "    return B_sin"
    ],
-   "id": "d519a39d2072ac5"
+   "id": "d519a39d2072ac5",
+   "outputs": [],
+   "execution_count": 149
   },
   {
    "metadata": {},
@@ -1223,8 +1228,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.342276Z",
-     "start_time": "2025-08-12T16:22:17.298910Z"
+     "end_time": "2025-08-12T16:35:41.040032Z",
+     "start_time": "2025-08-12T16:35:40.994651Z"
     }
    },
    "cell_type": "code",
@@ -1323,7 +1328,7 @@
    ],
    "id": "dbde1284d1bc272b",
    "outputs": [],
-   "execution_count": 123
+   "execution_count": 150
   },
   {
    "metadata": {},
@@ -1348,8 +1353,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.370072Z",
-     "start_time": "2025-08-12T16:22:17.348778Z"
+     "end_time": "2025-08-12T16:35:41.077014Z",
+     "start_time": "2025-08-12T16:35:41.049013Z"
     }
    },
    "cell_type": "code",
@@ -1400,7 +1405,7 @@
      ]
     }
    ],
-   "execution_count": 124
+   "execution_count": 151
   },
   {
    "metadata": {},
@@ -1411,8 +1416,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.396920Z",
-     "start_time": "2025-08-12T16:22:17.387027Z"
+     "end_time": "2025-08-12T16:35:41.112475Z",
+     "start_time": "2025-08-12T16:35:41.103450Z"
     }
    },
    "cell_type": "code",
@@ -1467,7 +1472,7 @@
    ],
    "id": "5c6ea5f8ac41f0a3",
    "outputs": [],
-   "execution_count": 125
+   "execution_count": 152
   },
   {
    "metadata": {},
@@ -1509,8 +1514,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.704532Z",
-     "start_time": "2025-08-12T16:22:17.403943Z"
+     "end_time": "2025-08-12T16:35:41.475227Z",
+     "start_time": "2025-08-12T16:35:41.123449Z"
     }
    },
    "cell_type": "code",
@@ -1664,13 +1669,13 @@
      ]
     }
    ],
-   "execution_count": 126
+   "execution_count": 153
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.733756Z",
-     "start_time": "2025-08-12T16:22:17.720952Z"
+     "end_time": "2025-08-12T16:35:41.496174Z",
+     "start_time": "2025-08-12T16:35:41.483212Z"
     }
    },
    "cell_type": "code",
@@ -1740,13 +1745,13 @@
    ],
    "id": "670350b18e95c889",
    "outputs": [],
-   "execution_count": 127
+   "execution_count": 154
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.822823Z",
-     "start_time": "2025-08-12T16:22:17.741238Z"
+     "end_time": "2025-08-12T16:35:41.604054Z",
+     "start_time": "2025-08-12T16:35:41.509139Z"
     }
    },
    "cell_type": "code",
@@ -1871,7 +1876,7 @@
      ]
     }
    ],
-   "execution_count": 128
+   "execution_count": 155
   },
   {
    "metadata": {},
@@ -1882,8 +1887,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.845228Z",
-     "start_time": "2025-08-12T16:22:17.839781Z"
+     "end_time": "2025-08-12T16:35:41.633133Z",
+     "start_time": "2025-08-12T16:35:41.626996Z"
     }
    },
    "cell_type": "code",
@@ -1901,7 +1906,90 @@
    ],
    "id": "4dbdc8e59e4d47be",
    "outputs": [],
-   "execution_count": 129
+   "execution_count": 156
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### The stiffness matrix from B_cos and B_sin",
+   "id": "51b65d105d241a22"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-12T16:35:41.649345Z",
+     "start_time": "2025-08-12T16:35:41.640119Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def calculate_K_efficient(harmonic_l: int, ng: int) -> np.array:\n",
+    "    \"\"\"\n",
+    "    Efficiently calculates the element stiffness matrix [k] for a given harmonic 'l'.\n",
+    "\n",
+    "    This method uses the B_cos and B_sin matrices to analytically integrate\n",
+    "    over theta first, creating a simplified kernel that is then numerically\n",
+    "    integrated over the r-z plane using Gauss quadrature.\n",
+    "\n",
+    "    Args:\n",
+    "        harmonic_l (int): The harmonic number (l) for the Fourier expansion.\n",
+    "        ng (int): The number of Gauss points to use for the r-z integration.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.array: The final numerical stiffness matrix for the element.\n",
+    "    \"\"\"\n",
+    "    # --- Step 1: Symbolic Pre-computation (The efficient part) ---\n",
+    "\n",
+    "    # Get the two symbolic \"basis\" B-matrices\n",
+    "    B_cos = calculate_B_cos_symbolic(harmonic_l)\n",
+    "    B_sin = calculate_B_sin_symbolic(harmonic_l)\n",
+    "\n",
+    "    # Get the material property matrix\n",
+    "    D = D_matrix()\n",
+    "\n",
+    "    # Create the final r-z integrand kernel by integrating over theta analytically.\n",
+    "    # The result depends on the value of the harmonic.\n",
+    "    if harmonic_l == 0:\n",
+    "        # For l=0, integral of d(theta) is 2*pi. B_sin is all zeros.\n",
+    "        K_kernel_rz = 2 * sp.pi * (B_cos.T * D * B_cos)\n",
+    "    else:\n",
+    "        # For l > 0, integral of cos^2 and sin^2 is pi. Cross-terms are zero.\n",
+    "        K_kernel_rz = sp.pi * (B_cos.T * D * B_cos + B_sin.T * D * B_sin)\n",
+    "\n",
+    "    # --- Step 2: Numerical Integration using Gauss Quadrature ---\n",
+    "\n",
+    "    num_dof = NNODE * 3\n",
+    "    K_lok_numeric = np.zeros((num_dof, num_dof))\n",
+    "\n",
+    "    r_iso = isoparametric_mapping()[0]\n",
+    "\n",
+    "    if NNODE in (4, 8):  # For quadrilateral elements\n",
+    "        for i in range(ng):\n",
+    "            for j in range(ng):\n",
+    "                s = gi_data[ng]['point'][i]  # R-direction Gauss point\n",
+    "                t = gi_data[ng]['point'][j]  # Z-direction Gauss point\n",
+    "                w = gi_data[ng]['weight'][i] * gi_data[ng]['weight'][j]\n",
+    "\n",
+    "                gp_map = {R: s, Z: t}\n",
+    "\n",
+    "                # Evaluate Jacobian determinant and radius at the Gauss point\n",
+    "                det_J_val = J_element.subs(gp_map).det().evalf()\n",
+    "                r_val = r_iso.subs(physical_coords_map).subs(gp_map).evalf()\n",
+    "\n",
+    "                # Evaluate the pre-computed r-z kernel at the Gauss point\n",
+    "                K_kernel_val = K_kernel_rz.subs(gp_map).evalf()\n",
+    "\n",
+    "                # Add the contribution. The 'r' from dV = r*dr*dz*d(theta) is here.\n",
+    "                contribution = np.array(K_kernel_val * r_val * det_J_val * w, dtype=float)\n",
+    "                K_lok_numeric += contribution\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported number of nodes. Only 4 and 8 are shown here.\")\n",
+    "\n",
+    "    return K_lok_numeric"
+   ],
+   "id": "f6474b8238b858aa",
+   "outputs": [],
+   "execution_count": 157
   },
   {
    "metadata": {},
@@ -1912,8 +2000,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.860474Z",
-     "start_time": "2025-08-12T16:22:17.852213Z"
+     "end_time": "2025-08-12T16:35:41.664145Z",
+     "start_time": "2025-08-12T16:35:41.656331Z"
     }
    },
    "cell_type": "code",
@@ -1980,7 +2068,7 @@
    ],
    "id": "91f782c853f6a04e",
    "outputs": [],
-   "execution_count": 130
+   "execution_count": 158
   },
   {
    "metadata": {},
@@ -2033,8 +2121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.873344Z",
-     "start_time": "2025-08-12T16:22:17.866812Z"
+     "end_time": "2025-08-12T16:35:41.675809Z",
+     "start_time": "2025-08-12T16:35:41.671131Z"
     }
    },
    "cell_type": "code",
@@ -2074,7 +2162,7 @@
    ],
    "id": "377e8ff0c20f722b",
    "outputs": [],
-   "execution_count": 131
+   "execution_count": 159
   },
   {
    "metadata": {},
@@ -2085,8 +2173,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:17.925819Z",
-     "start_time": "2025-08-12T16:22:17.880328Z"
+     "end_time": "2025-08-12T16:35:41.727688Z",
+     "start_time": "2025-08-12T16:35:41.684788Z"
     }
    },
    "cell_type": "code",
@@ -2297,7 +2385,7 @@
      ]
     }
    ],
-   "execution_count": 132
+   "execution_count": 160
   },
   {
    "metadata": {},
@@ -2308,8 +2396,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:18.362224Z",
-     "start_time": "2025-08-12T16:22:17.943777Z"
+     "end_time": "2025-08-12T16:35:42.660795Z",
+     "start_time": "2025-08-12T16:35:41.751792Z"
     }
    },
    "cell_type": "code",
@@ -2354,7 +2442,8 @@
     "    return reaction_forces\n",
     "\n",
     "# K = K_matrix(0, NGS[1])  # from K0, K1, K2...\n",
-    "K = K_general(0, 0, NGS[1])  # frem the general B matrix\n",
+    "# K = K_general(0, 0, NGS[1])  # frem the general B matrix\n",
+    "K = calculate_K_efficient(0, NGS[1])  # using B_cos and B_sin\n",
     "F = get_hydrostatic_load_force_vector()\n",
     "\n",
     "\n",
@@ -2387,7 +2476,7 @@
      ]
     }
    ],
-   "execution_count": 133
+   "execution_count": 161
   },
   {
    "metadata": {},
@@ -2398,8 +2487,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:18.551536Z",
-     "start_time": "2025-08-12T16:22:18.378182Z"
+     "end_time": "2025-08-12T16:35:43.334910Z",
+     "start_time": "2025-08-12T16:35:43.114213Z"
     }
    },
    "cell_type": "code",
@@ -2413,6 +2502,7 @@
     "\n",
     "        Be = B_matrix(n).subs(physical_coords_map)  # from Ba, BB\n",
     "        # Be = B_gen_element_0  # from the general B\n",
+    "        Be = B_gen_element_0  # from the general B\n",
     "\n",
     "        for i in range(NGS[0]):\n",
     "            for j in range(NGS[0]):\n",
@@ -2470,21 +2560,21 @@
      "output_type": "stream",
      "text": [
       "Stresses are:\n",
-      "⎡ -4.43971952101614 ⎤\n",
+      "⎡-0.706603307711582 ⎤\n",
       "⎢                   ⎥\n",
-      "⎢ 309.835707415711  ⎥\n",
+      "⎢ 49.3118843815956  ⎥\n",
       "⎢                   ⎥\n",
-      "⎢ -1.24041691364685 ⎥\n",
-      "⎢                   ⎥\n",
-      "⎢         0         ⎥\n",
+      "⎢-0.197418483297714 ⎥\n",
       "⎢                   ⎥\n",
       "⎢         0         ⎥\n",
       "⎢                   ⎥\n",
-      "⎣-0.0766618596575558⎦\n"
+      "⎢         0         ⎥\n",
+      "⎢                   ⎥\n",
+      "⎣-0.0122011139135215⎦\n"
      ]
     }
    ],
-   "execution_count": 134
+   "execution_count": 162
   },
   {
    "metadata": {},
@@ -2495,8 +2585,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:22:18.578915Z",
-     "start_time": "2025-08-12T16:22:18.568357Z"
+     "end_time": "2025-08-12T16:35:43.370666Z",
+     "start_time": "2025-08-12T16:35:43.358697Z"
     }
    },
    "cell_type": "code",
@@ -2582,13 +2672,13 @@
    ],
    "id": "1475d7e34fb63735",
    "outputs": [],
-   "execution_count": 135
+   "execution_count": 163
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-12T16:23:24.812639Z",
-     "start_time": "2025-08-12T16:23:24.365534Z"
+     "end_time": "2025-08-12T16:35:45.000960Z",
+     "start_time": "2025-08-12T16:35:43.379642Z"
     }
    },
    "cell_type": "code",
@@ -2638,12 +2728,12 @@
       "\n",
       "Case: axial force\n",
       "Stresses are:\n",
-      "7.87911235801553\n",
+      "49.5059230015021\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 139
+   "execution_count": 164
   }
  ],
  "metadata": {
